 syntax = "proto3";

package sysPb;

option go_package = "./sysPb";

// ------------------------------------
// Common Message
// ------------------------------------
message IdReq {
  int64 id = 1;
}

message IdsReq {
  string ids = 1;
}

message AnyReq {
}

message IdResp {
  int64 id = 1;
}

message SuccessResp {
}

message SuccessIdResp {
  int64 id = 1;
}

//--------------------------------角色表--------------------------------
message SysRole {
  int64 id = 1; //id
  string name = 2; //角色名称
  string code = 3; //角色编码
  int64 sort = 4; //显示顺序
  int64 status = 5; //角色状态(1-正常；0-停用)
  int64 dataScope = 6; //数据权限(0-所有数据；1-部门及子部门数据；2-本部门数据；3-本人数据)
  string createdAt = 7; //创建时间
  string updatedAt = 8; //更新时间
}

//--------------------------------角色和菜单关联表--------------------------------
message SysRoleMenu {
  int64 roleId = 1; //角色ID
  int64 menuId = 2; //菜单ID
}

//--------------------------------用户信息表--------------------------------
message SysUser {
  int64 id = 1; //id
  string username = 2; //用户名
  string nickname = 3; //昵称
  int64 gender = 4; //性别((1:男;2:女))
  string password = 5; //密码
  int64 deptId = 6; //部门ID
  string avatar = 7; //用户头像
  string mobile = 8; //联系方式
  int64 status = 9; //用户状态((1:正常;0:禁用))
  string email = 10; //用户邮箱
  string createdAt = 11; //创建时间
  string updatedAt = 12; //更新时间
  repeated string roles = 13;
  string deptName = 14;
  string  GenderLabel = 15;

}

 message SysUserProfile {
   int64 id = 1; //id
   string username = 2; //用户名
   string nickname = 3; //昵称
   int64 gender = 4; //性别((1:男;2:女))
   string password = 5; //密码
   int64 deptId = 6; //部门ID
   string avatar = 7; //用户头像
   string mobile = 8; //联系方式
   int64 status = 9; //用户状态((1:正常;0:禁用))
   string email = 10; //用户邮箱
   string createdAt = 11; //创建时间
   string updatedAt = 12; //更新时间
   string RoleNames = 13;
   string deptName = 14;
   string  GenderLabel = 15;
 }

//-----------sys_user_role---------------------角色和用户关联表--------------------------------
message SysUserRole {
  int64 userId = 1; //用户ID
  int64 roleId = 2; //角色ID
}


message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  int64  userId = 1;
  string accessToken = 2;
  int64  accessExpire = 3;
  int64  refreshAfter = 4;
}

message RefreshTokenReq {
  int64 userId = 1;
}



//用户相关
message UserGetResp {
  int64 Id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  int64 deptId = 5;
  string email = 6;
  int64 gender = 7;
  string mobile = 8;
  int64 status = 9;
  repeated int64 roleIds = 10;
  repeated string roles = 11;
  repeated string perms = 12;
}

//enum SysMenuTypeEnum {
//  CATALOG = 0;
//  MENU = 1;
//  BUTTON = 2;
//  EXTLINK = 3;
//}

//--------------------------------菜单管理--------------------------------
message SysMenu {
  int64 id = 1;
  int64 parentId = 2;
  string treePath = 3;
  string name = 4;
  int64 type = 5; //菜单类型(1:菜单；2:目录；3:外链；4:按钮)
  string routeName = 6;
  string routePath = 7;
  string component = 8;
  string perm = 9;
  bool alwaysShow = 10;
  bool keepAlive = 11;
  bool visible = 12;
  int64 sort = 13;
  repeated menuParamsItem params = 14;
  string icon = 15;
  string redirect = 16;
  string createdAt = 17;
  string updatedAt = 18;
  repeated string  roles = 19;
}

message  menuParamsItem {
  string key = 1;
  string value = 2;
}

message SysMenuItem {
  int64 id = 1;
  int64 parentId = 2;
  string treePath = 3;
  string name = 4;
  int64 type = 5; //菜单类型(1:菜单；2:目录；3:外链；4:按钮)
  string routeName = 6;
  string routePath = 7;
  string component = 8;
  string perm = 9;
  bool alwaysShow = 10;
  bool keepAlive = 11;
  bool visible = 12;
  int64 sort = 13;
  repeated menuParamsItem params = 14;
  string icon = 15;
  string redirect = 16;
  repeated SysMenuItem  children = 17;
}

message RoutesReq {
  int64 uid = 1;
  repeated int64 types = 2;
}

message RoutesResp {
  repeated SysMenu list = 1;
}

//列表List
message MenuListReq {
  string keywords = 1;
}

//列表Resp
message MenuListResp {
  repeated SysMenuItem list = 1;
}



message  MenuForm{
  int64 id = 1;
  int64 parentId = 2;
  string treePath = 3;
  string name = 4;
  int64 type = 5; //菜单类型(1:菜单；2:目录；3:外链；4:按钮)
  string routeName = 6;
  string routePath = 7;
  string component = 8;
  string perm = 9;
  bool alwaysShow = 10;
  bool keepAlive = 11;
  bool visible = 12;
  int64 sort = 13;
  repeated menuParamsItem params = 14;
  string icon = 15;
  string redirect = 16;
}

message MenuOption{
  string label = 1;
  int64 value = 2;
  repeated MenuOption children = 3;
}

message  MenuOptionsResp{
  repeated MenuOption items = 3;
}


message  UserPageReq{
  string keywords = 1;
  int64 deptId = 2;
  int64 status = 3;
  int64 pageNum = 4;
  int64 pageSize = 5;
  string startTime = 6;
  string endTime = 7;
}

message UserPageResp{
  repeated SysUser list = 1;
  int64 Total = 2;
}

message  UserAddReq{
  string username = 1; //用户名
  string nickname = 2; //昵称
  int64 gender = 3; //性别((1:男;2:女))
  string password = 4; //密码
  int64 deptId = 5; //部门ID
  string avatar = 6; //用户头像
  string mobile = 7; //联系方式
  int64 status = 8; //用户状态((1:正常;0:禁用))
  string email = 9; //用户邮箱
  repeated int64 roleIds = 10;
}

message   UserChangePwdReq{
  int64  userId = 1; //userId
  string password = 2; //密码
}

message  UserUpdateReq{
  int64 id = 1; //id
  string username = 2; //用户名
  string nickname = 3; //昵称
  int64 gender = 4; //性别((1:男;2:女))
  string password = 5; //密码
  int64 deptId = 6; //部门ID
  string avatar = 7; //用户头像
  string mobile = 8; //联系方式
  int64 status = 9; //用户状态((1:正常;0:禁用))
  string email = 10; //用户邮箱
  repeated int64 roleIds = 11;
}

message  RoleListReq{
  string keywords = 1;
  int64 pageNum = 2;
  int64 pageSize = 3;
}


message  RoleListResp{
  repeated SysRole list = 1;
  int64 Total = 2;
}

message RoleForm{
  int64 id = 1;
  string name = 2;
  string code = 3;
  int64 sort = 4;
  int64 status = 5;
  int64 dataScope = 6;
}

message RoleOption{
  string label = 1;
  int64 value = 2;
}

message RoleOptionsResp{
  repeated RoleOption items = 1;
}

message  RoleMenuIdsResp{
  repeated int64 items = 1;
}

message RoleSetMenuIdsReq{
  int64 roleId = 1;
  repeated int64 menuIds = 2;
}


//--------------------------------部门表--------------------------------
message SysDept {
  int64 id = 1; //主键
  string name = 2; //部门名称
  int64 parentId = 3; //父节点id
  string treePath = 4; //父节点id路径
  int64 sort = 5; //显示顺序
  int64 status = 6; //状态(1:正常;0:禁用)
  int64 deleted = 7; //逻辑删除标识(1:已删除;0:未删除)
  int64 createBy = 8; //创建人ID
  int64 updateBy = 9; //修改人ID
  string createdAt = 10; //创建时间
  string updatedAt = 11; //更新时间
  string code = 12;
}


message DeptForm{
  int64 id = 1;
  string name = 2;
  int64 parentId = 3;
  string treePath = 4;
  int64 sort = 5;
  int64 status = 6;
  int64 createBy = 7;
  int64 updateBy = 8;
  string code = 9;
}

message DeptListReq{
  string keywords = 1;
  int64 status = 2;
}

message SysDeptItem {
  int64 id = 1; //主键
  string name = 2; //部门名称
  int64 parentId = 3; //父节点id
  string treePath = 4; //父节点id路径
  int64 sort = 5; //显示顺序
  int64 status = 6; //状态(1:正常;0:禁用)
  int64 deleted = 7; //逻辑删除标识(1:已删除;0:未删除)
  int64 createBy = 8; //创建人ID
  int64 updateBy = 9; //修改人ID
  string createdAt = 10; //创建时间
  string updatedAt = 11; //更新时间
  string code = 12;
  repeated SysDeptItem  children = 13;
}

message DeptListResp{
  repeated SysDeptItem list = 1;
}

message DeptOption{
  string label = 1;
  int64 value = 2;
  repeated DeptOption children = 3;
}

message DeptOptionResp{
  repeated DeptOption items = 1;
}

//--------------------------------字典数据表--------------------------------
message SysDict {
  int64 id = 1; //主键
  string code = 2; //字典类型编码
  string name = 3; //字典项名称
  int64 status = 4; //状态(1:正常;0:禁用)
  string remark = 5; //备注
  string createdAt = 6; //创建时间
  string updatedAt = 7; //更新时间
}

message SysDictData {
  int64 id = 1; //主键
  int64 dictId = 2; //dictId
  string value = 3;
  string label = 4;
  string tag = 5;
  int64 status = 6;
  string remark = 7;
  int64 sort = 8;
  string createdAt = 9; //创建时间
  string updatedAt = 10; //更新时间
}

message DictForm{
  int64 id = 1;
  string code = 2; //字典类型编码
  string name = 3; //字典项名称
  int64 status = 4; //状态(1:正常;0:禁用)
  string remark = 5; //备注
}

message DictDataForm{
  int64 id = 1; //主键
  int64 dictId = 2; //dictId
  string value = 3; //类型编码
  string label = 4; //类型编码
  string tag = 5; //类型编码
  int64 status = 6; //状态(1:正常;0:禁用)
  string remark = 7; //备注
  int64 sort = 8; //主键
}

message DictSimListResp{
  repeated DictSimItem list = 1;
}

message DictSimItem{
  string name = 1;
  string dictCode = 2;
  repeated DictDataSimItem dictDataList = 3;
}

message DictDataSimItem{
  string value = 1;
  string label = 2;
  string tagType = 3;
}

message DictPageReq{
  string keywords = 1;
  int64 pageNum = 2;
  int64 pageSize = 3;
}

message DictPageResp{
  repeated SysDict list = 1;
  int64 Total = 2;
}

message DictDataPageReq{
  string keywords = 1;
  int64 dictId = 2;
  int64 pageNum = 3;
  int64 pageSize = 4;
}

message DictDataPageResp{
  repeated SysDictData list = 1;
  int64 Total = 2;
}

//
//message DictDataOption{
//  string label = 1;
//  int64 value = 2;
//  repeated DeptOption children = 3;
//}
//
//message DictOption{
//  string label = 1;
//  string value = 2;
//  repeated DeptOption children = 3;
//}
//
//message DictTypeOptionsResp{
//  repeated DictDataOption items = 1;
//}
//
//message DictOptionsResp{
//  repeated DictOption items = 1;
//}

//--------------------------------系统日志表--------------------------------
message SysLog {
  int64 id = 1; //主键
  string module = 2; //日志模块
  string content = 3; //日志内容
  string requestUri = 4; //请求路径
  string ip = 5; //IP地址
  string province = 6; //省份
  string city = 7; //城市
  int64 executionTime = 8; //执行时间(ms)
  string browser = 9; //浏览器
  string browserVersion = 10; //浏览器版本
  string os = 11; //终端系统
  int64 createBy = 12; //创建人ID
  string createdAt = 13; //创建时间
}

message SysLogFormReq {
  string module = 1; //日志模块
  string content = 2; //日志内容
  string requestUri = 3; //请求路径
  string ip = 4; //IP地址
  string province = 5; //省份
  string city = 6; //城市
  int64 executionTime = 7; //执行时间(ms)
  string browser = 8; //浏览器
  string browserVersion = 9; //浏览器版本
  string os = 10; //终端系统
  int64 createBy = 11; //创建人ID
}



//--------------------------------通知公告表--------------------------------
message SysNotice {
  int64 id = 1; //id
  string title = 2; //通知标题
  string content = 3; //通知内容
  int64 type = 4; //通知类型（关联字典编码：notice_type）
  string level = 5; //通知等级（字典code：notice_level）
  int64 targetType = 6; //目标类型（1: 全体, 2: 指定）
  string targetUserIds = 7; //目标人ID集合（多个使用英文逗号,分割）
  int64 publisherId = 8; //发布人ID
  int64 publishStatus = 9; //发布状态（0: 未发布, 1: 已发布, -1: 已撤回）
  int64 publishTime = 10; //发布时间
  int64 revokeTime = 11; //撤回时间
  int64 createBy = 12; //创建人ID
  int64 updateBy = 13; //更新人ID
  string createdAt = 14; //创建时间
  string updatedAt = 15; //更新时间
}

message SysNoticeFormReq {
  string title = 1; //通知标题
  string content = 2; //通知内容
  int64 type = 3; //通知类型（关联字典编码：notice_type）
  string level = 4; //通知等级（字典code：notice_level）
  int64 targetType = 5; //目标类型（1: 全体, 2: 指定）
  string targetUserIds = 6; //目标人ID集合（多个使用英文逗号,分割）
  int64 publisherId = 7; //发布人ID
  int64 publishStatus = 8; //发布状态（0: 未发布, 1: 已发布, -1: 已撤回）
  int64 publishTime = 9; //发布时间
  int64 revokeTime = 10; //撤回时间
  int64 createBy = 11; //创建人ID
  int64 updateBy = 12; //更新人ID
  int64 id = 13;
}

message SysNoticePageReq {
  int64 pageNum = 1;
  int64 pageSize = 2;
  string title = 3; //
  int64 uid = 4; //
  int64 publishStatus = 5; //发布状态（0: 未发布, 1: 已发布, -1: 已撤回）
  string startTime = 6;
  string endTime = 7;
}

message SysNoticePageResp {
  repeated SysNotice list = 1; //sysNotice
  int64 Total = 2;
}



service sys{

  rpc Login(LoginReq) returns (LoginResp);
  rpc RefreshToken(RefreshTokenReq) returns (LoginResp);
  rpc UserPage(UserPageReq) returns (UserPageResp);
  rpc UserGet(IdReq) returns (UserGetResp);
  rpc UserProfile(IdReq) returns (SysUserProfile);
  rpc UserAdd(UserAddReq) returns (IdResp);
  rpc UserUpdate(UserUpdateReq) returns (SuccessResp);
  rpc UserChangePwd(UserChangePwdReq) returns (SuccessResp);
  rpc UserDel(IdsReq) returns (SuccessResp);

  rpc RoleList(RoleListReq) returns (RoleListResp);
  rpc RoleOptions(AnyReq) returns (RoleOptionsResp);
  rpc RoleGet(IdReq) returns (SysRole);
  rpc RoleAdd(RoleForm) returns (IdResp);
  rpc RoleUpdate(RoleForm) returns (SuccessResp);
  rpc RoleDel(IdsReq) returns (SuccessResp);
  rpc RoleMenuIds(IdReq) returns (RoleMenuIdsResp);
  rpc RoleSetMenuIds(RoleSetMenuIdsReq) returns (SuccessResp);

  rpc Routes(RoutesReq) returns (RoutesResp);
  rpc MenuList(MenuListReq) returns (MenuListResp);
  rpc MenuGet(IdReq) returns (SysMenu);
  rpc MenuAdd(MenuForm) returns (SuccessResp);
  rpc MenuUpdate(MenuForm) returns (SuccessResp);
  rpc MenuDel(IdsReq) returns (SuccessResp);
  rpc MenuOptions(AnyReq) returns (MenuOptionsResp);

  rpc DeptAdd(DeptForm) returns (SuccessResp);
  rpc DeptUpdate(DeptForm) returns (SuccessResp);
  rpc DeptDel(IdsReq) returns (SuccessResp);
  rpc DeptGet(IdReq) returns (SysDept);
  rpc DeptList(DeptListReq) returns (DeptListResp);
  rpc DeptOptions(AnyReq) returns (DeptOptionResp);


  rpc DictSimList(AnyReq) returns (DictSimListResp);

  rpc DictAdd(DictForm) returns (SuccessResp);
  rpc DictUpdate(DictForm) returns (SuccessResp);
  rpc DictDel(IdsReq) returns (SuccessResp);
  rpc DictGet(IdReq) returns (SysDict);
  rpc DictPage(DictPageReq) returns (DictPageResp);
//  rpc DictOptions(TypeReq) returns (DictOptionsResp);

  rpc DictDataAdd(DictDataForm) returns (SuccessResp);
  rpc DictDataUpdate(DictDataForm) returns (SuccessResp);
  rpc DictDataDel(IdsReq) returns (SuccessResp);
  rpc DictDataGet(IdReq) returns (SysDictData);
  rpc DictDataPage(DictDataPageReq) returns (DictDataPageResp);

  rpc SysNoticePage(SysNoticePageReq) returns (SysNoticePageResp);
  //  rpc DictTypeAdd(DictTypeForm) returns (SuccessResp);
//  rpc DictTypeUpdate(DictTypeForm) returns (SuccessResp);
//  rpc DictTypeDel(IdsReq) returns (SuccessResp);
//  rpc DictTypeList(DictTypeListReq) returns (DictTypeListResp);
//  rpc DictTypeOptions(AnyReq) returns (DictTypeOptionsResp);


}





